--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pillow
-opencv-python-headless
-paddlepaddle==2.6.1
+streamlit==1.48.0
+pillow>=10
+opencv-python-headless>=4.10
+paddlepaddle==3.1.0
 paddleocr==3.1.0
 transformers==4.44.2
 sentencepiece==0.1.99
